--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.26.1",
+    "babel-eslint": "^10.1.0",
     "csh-material-bootstrap": "^4.5.2",
     "fs": "^0.0.1-security",
     "history": "^5.0.0",
+    "https": "^1.0.0",
     "mapbox-gl": "^2.7.1",
     "oidc-client": "^1.10.1",
     "react": "^16.13.1",
@@ -22,8 +25,8 @@
     "three": "^0.139.0"
   },
   "scripts": {
-    "start": "react-scripts start",
     "build": "react-scripts build",
+    "start": "react-scripts start",
     "test": "react-scripts test --env=jsdom --passWithNoTests",
     "eject": "react-scripts eject",
     "lint": "eslint src/**/*.ts src/**/*.tsx"
@@ -36,7 +39,8 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.5",
     "@types/reactstrap": "^8.5.1",
-    "babel-eslint": "^10.0.2",
+    "assert": "^2.0.0",
+    "buffer": "^6.0.3",
     "editorconfig": "^0.15.3",
     "eslint": "^6.1.0",
     "eslint-config-prettier": "6.12.0",
@@ -46,6 +50,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.14.3",
     "prettier": "2.1.2",
+    "process": "^0.11.10",
     "typescript": "4.0.3"
   },
   "browserslist": {
