--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@ REACT_APP_SSO_CLIENT_ID=replace-with-sso-client-id
 REACT_APP_SSO_AUTHORITY=https://sso.csh.rit.edu/auth/realms/csh
 
 REACT_APP_MAPBOX_TOKEN=replace-with-token
+REACT_APP_DEVELOPER_MODE=false
 
 REACT_APP_SITE_URL=http://localhost:3000/
 REACT_APP_API_BACKEND_URL=https://imagine-2022-backend-git-imagine2022-backend.apps.okd4.csh.rit.edu
