--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.26.1",
-    "babel-eslint": "^10.1.0",
     "csh-material-bootstrap": "^4.5.2",
     "fs": "^0.0.1-security",
     "history": "^5.0.0",
@@ -33,13 +32,16 @@
   },
   "devDependencies": {
     "@types/jest": "^24.0.0",
+    "@types/mapbox__mapbox-gl-draw": "^1.2.3",
     "@types/mapbox-gl": "^2.6.3",
     "@types/node": "^12.20.47",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.5",
     "@types/reactstrap": "^8.5.1",
+    "@typescript-eslint/parser": "^5.17.0",
     "assert": "^2.0.0",
+    "babel-eslint": "^10.1.0",
     "buffer": "^6.0.3",
     "editorconfig": "^0.15.3",
     "eslint": "^6.1.0",
@@ -51,7 +53,7 @@
     "eslint-plugin-react": "^7.14.3",
     "prettier": "2.1.2",
     "process": "^0.11.10",
-    "typescript": "4.0.3"
+    "typescript": "^4.0.3"
   },
   "browserslist": {
     "production": [
