--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-scripts": "^5.0.0",
     "reactstrap": "^8.6.0",
     "sass": "^1.49.9",
-    "three": "^0.139.0"
+    "three": "^0.139.0",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "build": "react-scripts build",
@@ -39,6 +40,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.5",
     "@types/reactstrap": "^8.5.1",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/parser": "^5.17.0",
     "assert": "^2.0.0",
     "babel-eslint": "^10.1.0",
