--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 REACT_APP_SSO_CLIENT_ID=replace-with-sso-client-id
+REACT_APP_SSO_CLIENT_SECRET=replace-with-sso-client-secret
 REACT_APP_SSO_AUTHORITY=https://sso.csh.rit.edu/auth/realms/csh
 
 REACT_APP_MAPBOX_TOKEN=replace-with-token
